--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
   <div class="container">
     <div class="header">
       <h1>🫀 Calculadora de Función Diastólica</h1>
-      <div class="subtitle">ASE 2025</div>
+      <div class="subtitle">en base a ASE 2025</div>
     </div>
 
     <div class="form-container">
@@ -383,7 +383,7 @@
         </a>
       </div>
 
-      <div class="version-footer">v1.4.0 · actualizada 17/08/2025</div>
+      <div class="version-footer">v1.3.9 · actualizada 13/08/2025</div>
 
       <!-- Footer legal minimalista (siempre visible en una línea) -->
       <div class="legal-footer">
